{
    "name": "SceneControls",
    "maps": [
        {
            "name": "Control",
            "id": "4aa5c4c9-f83f-4b5f-957c-e0b394dff755",
            "actions": [
                {
                    "name": "RestartLevel",
                    "type": "Button",
                    "id": "69c4304b-339a-4e2d-8cfc-533b00fe473e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RestoreSnapshot",
                    "type": "Button",
                    "id": "28a31aba-261e-46fe-a1d8-a24bb2d8acd6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MenuOpen",
                    "type": "Button",
                    "id": "63dbe044-3c52-43bd-bfd1-a46f89824026",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b28fb35c-3eba-4b47-affe-7d2a995a2a09",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RestartLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b56cff4-78a0-4303-8452-10363fc53901",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RestartLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81b4947d-8911-483f-8ee8-441e9a26c820",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RestoreSnapshot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97d00abb-68c5-4ea0-b138-909f96d10bc8",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RestoreSnapshot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b9199ab-8709-44fd-9745-be57c32d4251",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuOpen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12d60938-1275-4bc2-874d-02b86046c293",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuOpen",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}